--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "JSON schema types for TypeScript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsc"
   },
   "author": "Tao Peng",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "typescript": "^3.2.2"
+  }
 }
