--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x, 14.x]
-        ts-version: [3.x, 4.x, latest]
+        node-version: [14.x, 16.x]
+        ts-version: [4.3, 4.4, 4.5, 4.x]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
